--- a/HotelComercy/MagicVilla_Web/Views/Shared/_Layout.cshtml
+++ b/HotelComercy/MagicVilla_Web/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                         httpAcc.HttpContext.Session.GetString(SD.SessionToken).ToString().Length > 0)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark text-end" asp-controller="User" asp-action="Logout">Logout</a>
+                                <a class="nav-link text-dark" asp-controller="User" asp-action="Logout">Logout</a>
                             </li>
                         }
                         else
